--- a/src/components/Filter-block/Filter-block.css
+++ b/src/components/Filter-block/Filter-block.css
@@ -1,15 +1,3 @@
-.filter-block__filter-button {
-  background-color: white;
-  padding: 3px 10px;
-  min-width: 100px;
-  transition: 0.34s ease-in-out;
-}
-
-.filter-block__filter-button:hover {
-  background-color: rgba(255, 255, 255, 0.863);
-  transition: 0.34s ease-in-out;
-}
-
-.filter-block__filter-button:active {
-  transform: scale(0.95, 0.95);
+.active-btn {
+  border: 2px solid rgba(47, 117, 221, 0.856) !important;
 }
