--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,6 +13,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
+  font-family: 'Nunito Sans', sans-serif;
 }
