--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -2,6 +2,6 @@
   height: 100vh;
   width: 15%;
   display: inline-block;
-  border-right: 3px solid black;
+  border-right: 1px solid rgba(0, 0, 0, 0.253);
   margin-right: auto;
 }
