--- a/src/components/Todo-item/Todo-item.css
+++ b/src/components/Todo-item/Todo-item.css
@@ -1,22 +1,18 @@
-.todo-list {
+.todo-item {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 15px 0;
+  border-bottom: 1px solid rgba(143, 143, 143, 0.2);
 }
 
-.todo-list__icon:hover {
+.todo-item:first-of-type {
+  margin-top: 1em;
+}
+
+.todo-item__icon:hover {
   cursor: pointer;
 }
 
-.todo-list__icon:active {
+.todo-item__icon:active {
   transform: scale(0.95, 0.95);
-}
-
-.done-icon {
-  color: rgb(56, 190, 56);
-}
-
-.delete-icon {
-  color: rgb(199, 0, 0);
-  margin-left: 1em;
 }
