--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,4 @@
-.sidebar {
-  height: 100vh;
-  width: 15%;
-  display: inline-block;
-  border-right: 1px solid rgba(0, 0, 0, 0.253);
-}
+  .sidebar {
+    height: 100vh;
+    margin: 0;
+  }
